Fixed the CRT effect not covering the whole page!

--- a/css/website.css
+++ b/css/website.css
@@ -6,10 +6,10 @@
   --background: #000900;
 }
 
-body::before {
+html::before {
   content: " ";
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
